<resources>
    <string name="author">Created by Michał Ryszka</string>
    <string name="app_name">VoteEverything</string>
    <string name="app_name_with_space">Vote Everything</string>
    <string name="singInButton">Sing in</string>
    <string name="singUpButton">Sing up</string>
    <string name="guestButton">Guest</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="singIn">Sing in</string>
    <string name="singUp">Sing up</string>
    <string name="create">Create</string>
    <string name="username">Username:</string>
    <string name="usernameFromUser">Username...</string>
    <string name="exitButton">Exit</string>
    <string name="createSurvey">Create Survey</string>
    <string name="enterSurveyName">Please enter survey question...</string>
    <string name="options">Please enter option...</string>
    <string name="addOption">option</string>
    <string name="deleteOption">option</string>
    <string name="availableSurveys">Available Surveys</string>
    <string name="vote">Vote</string>
    <string name="addCompany">Add Company, shop or restaurant</string>
    <string name="nameofCompany">Name of company, shop or restaurant</string>
    <string name="description">Short description...</string>
    <string name="rateIT">Rate it!</string>
    <string name="addComment">Add your comment</string>
    <string name="add">Add</string>
    <string name="yourComment">Enter your comment...</string>

</resources>