<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".AddCompanyActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backACompanyBt"
        style="@style/MainWindowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_arrow_back"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/allerta"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:cornerRadius="20dp"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus"
        android:text="@string/addCompany"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/companyNameACompany"
        android:layout_width="358dp"
        android:layout_height="56dp"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/nameofCompany"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <EditText
        android:id="@+id/descriptionACompany"
        android:layout_width="357dp"
        android:layout_height="129dp"
        android:background="@android:color/transparent"
        android:ems="6"
        android:fontFamily="@font/allerta"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:maxLength="130"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createACompanyBt"
        style="@style/MainWindowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_baseline_create_new_folder"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/allerta"
        android:text="@string/create"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:cornerRadius="20dp"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.793"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

</androidx.constraintlayout.widget.ConstraintLayout>