<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sing_dialog_shape"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="10dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="305dp"
        android:layout_height="81dp"
        android:gravity="clip_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backSingUpBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/start_activity_buttons"
            android:fontFamily="@font/allerta"
            android:text="@string/back"
            android:textColor="#FCFDFD"
            android:textSize="20sp"
            app:backgroundTint="@null"
            android:drawableLeft="@drawable/ic_baseline_arrow_back"
            android:drawableTint="#FFFFFF"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createSingUpBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/start_activity_buttons"
            android:drawableRight="@drawable/ic_baseline_create_mini"
            android:drawableTint="#FFFFFF"
            android:fontFamily="@font/allerta"
            android:text="@string/create"
            android:textColor="#FCFDFD"
            android:textSize="20sp"
            app:backgroundTint="@null" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="386dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/emailTextSingUp"
            android:layout_width="44dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailFromUserSingUp"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/allerta"
            android:inputType="textEmailAddress"
            android:textColor="#FCFDFD" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="388dp"
        android:layout_height="59dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/passwordTextSingUp"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordFromUserSingUp"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/allerta"
            android:inputType="textPassword"
            android:textColor="#FCFDFD" />
    </LinearLayout>

    <TextView
        android:id="@+id/singInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:padding="10dp"
        android:text="@string/singUp"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="387dp"
        android:layout_height="66dp"
        android:layout_marginTop="144dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nicknameSingUp"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nicknameFormUserSingUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/allerta"
            android:hint="@string/usernameFromUser"
            android:inputType="textPersonName"
            android:textColor="#FCFDFD" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>