<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/add_comment_shape">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addCommentBt"
        style="@style/MainWindowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/ic_baseline_add_comment"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/allerta"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:cornerRadius="20dp"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentAddComment"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backAddCommentBt"
        style="@style/MainWindowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_arrow_back"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/allerta"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:cornerRadius="20dp"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentAddComment" />

    <EditText
        android:id="@+id/commentAddComment"
        android:layout_width="361dp"
        android:layout_height="241dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="52dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:gravity="start|top"
        android:hint="@string/yourComment"
        android:inputType="textMultiLine"
        android:maxLength="130"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arbutus"
        android:text="@string/addComment"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

</androidx.constraintlayout.widget.ConstraintLayout>