<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".CreateSurveyActivity">

    <TextView
        android:id="@+id/titleCSurvey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="20dp"
        android:fontFamily="@font/allerta"
        android:padding="5dp"
        android:text="@string/createSurvey"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <EditText
        android:id="@+id/surveyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/allerta"
        android:hint="@string/enterSurveyName"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_margin="25dp"
        android:layout_weight="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.415">

        <LinearLayout
            android:id="@+id/optionsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/option1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/allerta"
                android:hint="@string/options"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/option2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/allerta"
                android:hint="@string/options"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addOptionCSurveyBt"
        style="@style/MainWindowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:drawableLeft="@drawable/ic_baseline_control_point"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/allerta"
        android:text="@string/addOption"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:cornerRadius="20dp"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="0.333" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteOptionCSurveyBt"
        style="@style/MainWindowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:drawableRight="@drawable/ic_baseline_delete_forever"
        android:drawableTint="#FFFFFF"
        android:text="@string/deleteOption"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:backgroundTint="@null"
        app:cornerRadius="20dp"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="0.333" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createCSurveyBt"
        style="@style/MainWindowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_baseline_create_new_folder"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/allerta"
        android:text="@string/create"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:cornerRadius="20dp"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="0.589" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backCSurveyBt"
        style="@style/MainWindowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_baseline_arrow_back"
        android:drawableTint="#FFFFFF"
        android:fontFamily="@font/allerta"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        app:backgroundTint="@null"
        app:cornerRadius="20dp"
        app:iconPadding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView"
        app:layout_constraintVertical_bias="0.589" />

</androidx.constraintlayout.widget.ConstraintLayout>