<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".StartScreenActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF9800"
        android:fontFamily="casual"
        android:letterSpacing="0.2"
        android:lineSpacingExtra="8sp"
        android:text="@string/app_name_with_space"
        android:textAlignment="center"
        android:textColor="#F6F4DF"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/singInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/start_activity_buttons"
        android:elevation="20dp"
        android:fontFamily="@font/allerta"
        android:padding="10dp"
        android:stateListAnimator="@null"
        android:text="@string/singInButton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <Button
        android:id="@+id/singUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/start_activity_buttons"
        android:elevation="20dp"
        android:fontFamily="@font/allerta"
        android:padding="10dp"
        android:stateListAnimator="@null"
        android:text="@string/singUpButton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singInButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/guestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/start_activity_buttons"
        android:elevation="20dp"
        android:fontFamily="@font/allerta"
        android:padding="10dp"
        android:stateListAnimator="@null"
        android:text="@string/guestButton"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singUpButton"
        app:layout_constraintVertical_bias="0.104" />
</androidx.constraintlayout.widget.ConstraintLayout>