<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sing_dialog_shape"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="10dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp"
    android:visibility="visible">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="305dp"
        android:layout_height="81dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748">

        <Button
            android:id="@+id/singInBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/start_activity_buttons"
            android:fontFamily="@font/allerta"
            android:text="@string/back"
            android:textColor="#1560AC"
            android:textSize="20sp" />

        <Button
            android:id="@+id/loginSingInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/start_activity_buttons"
            android:fontFamily="@font/allerta"
            android:text="@string/login"
            android:textColor="#1560AC"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="386dp"
        android:layout_height="61dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322">

        <TextView
            android:id="@+id/emailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailFromUser"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/allerta"
            android:inputType="textEmailAddress"
            android:textColor="#6F30DF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="386dp"
        android:layout_height="78dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.167">

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/allerta"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordFromUser"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="@font/allerta"
            android:inputType="textPassword"
            android:textColor="#6F30DF" />
    </LinearLayout>

    <TextView
        android:id="@+id/singInTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:padding="10dp"
        android:text="@string/singIn"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>